Add some styles , such of flexbox, using class and id

--- a/exercise/exercise.html
+++ b/exercise/exercise.html
@@ -1,38 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Holy Grail</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="header">
-      MY AWESOME WEBSITE
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web-page</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="header">
+    <div class="logo">
+      <H1>Header logo</H1>
     </div>
-    <div class="main-info">
-    <div class="sidebar">
-      <ul>
-        <li><a href="#">⭐ - link one</a></li>
-        <li><a href="#">🦸🏽‍♂️ - link two</a></li>
-        <li><a href="#">🖌️ - link three</a></li>
-        <li><a href="#">👌🏽 - link four</a></li>
-      </ul>
+    <div class="links">
+      <a href="#">Link_1</a>
+      <a href="#">Link_2</a>
+      <a href="#">Link_3</a>
     </div>
-
-    <div class="cards">
-    <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet? Dolorem dignissimos maiores non delectus possimus dolor nulla repudiandae vitae provident quae, obcaecati ipsam unde impedit corrupti veritatis minima porro?</div>
-    <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi quaerat qui iure ipsam maiores velit tempora, deleniti nesciunt fuga suscipit alias vero rem, corporis officia totam saepe excepturi odit ea.</div>
-    <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla. Laudantium optio accusantium quaerat fugiat, natus officia esse autem?</div>
-    <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
-    <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla. Laudantium optio accusantium quaerat fugiat, natus officia esse autem?</div>
-    <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
+  </div>
+  <div class="hero_main">
+    <div class="hero_main_text">
+      <h1>This Website is AWESOME</h1>
+      <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, corporis eum? Reiciendis pariatur dolorem aliquam aperiam error. Earum quidem molestias, deleniti recusandae numquam fugiat, possimus cum corrupti consequatur minima aspernatur!</p>
+      <button>Sing Up</button>
+    </div>
+    <div class="img_content"><img src="../images/awesome-logo.svg" alt="awesome-logo"></div>
+  </div>  
+  <div class="main-info">
+    <h1>Some random information.</h1>
+    <div class="block-cards">
+      <div class="card-1">
+        <div class="block"></div>
+        <div>this is some subtext under image</div>
+      </div>
+      <div class="card-1">
+        <div class="block"></div>
+        <div>this is some subtext under image</div>
+      </div>
+      <div class="card-1">
+        <div class="block"></div>
+        <div>this is some subtext under image</div>
+      </div>
+      <div class="card-1">
+        <div class="block"></div>
+        <div>this is some subtext under image</div>
+      </div>
+      
+    </div>
+  </div>
+  <div class="quote_section">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa nisi officiis illo. Iure consequatur, eligendi totam voluptatem harum rem eos perferendis quae accusantium incidunt sapiente voluptates eaque, tempora, quas molestiae.</p>
+    <h3>-Author of this text</h3>
+  </div>
+  <div class="btn_block">
+    <div class="btn_info">
+      <div class="btn_info_text"><H2>Call to action! It's time!</H2>
+      <p>Sign up for our product by clicking that button right over there</p></div>
+      <button>Sign up</button>
     </div>
     
   </div>
-    <div class="footer">
-      The Odin Project ❤️
-    </div>
-  </body>
+  <footer>
+    Copyright The Odin Project 2021
+  </footer>
+  
+</body>
 </html>
