Fixed Robot-School page

--- a/WebSite/Практика-сайты/Robot-school/src/index.html
+++ b/WebSite/Практика-сайты/Robot-school/src/index.html
@@ -83,11 +83,13 @@
         <h1>Профессиональные тренеры</h1>
         <!-- Прокрутка карточек -->
         <div class="four-section-scrolling">
-            <div class="four-section-scrolling__cards"> <img src="./img/unsplash_Zz5LQe-VSMY.jpg" alt="Карточка-1"><h3>Ирина Лайм</h3> <p>преподаватель по робототехнике</p></div>
-            <div class="four-section-scrolling__cards"><img src="./img/unsplash_OhKElOkQ3RE.jpg" alt="Карточка-2"><h3>Максим Петров</h3><p>преподаватель по программированию</p></div>
-            <div class="four-section-scrolling__cards"><img src="./img/unsplash_Z_bTArFy6ks.jpg" alt="Карточка-3"><h3>Лиза Весенняя</h3><p>преподаватель по программированию</p></div>
-            <div class="four-section-scrolling__cards"><img src="./img/unsplash_IF9TK5Uy-KI.jpg" alt="Карточка-4"><h3>Марина Орлова</h3><p>преподаватель по робототехнике</p></div>
-            <div class="four-section-scrolling__cards"><img src="./img/unsplash_rriAI0nhcbc.jpg" alt="Карточка-5"><h3>Константин Назаров</h3><p>преподаватель по робототехнике</p></div>
+            <div class="carousel-track">
+                <div class="four-section-scrolling__cards"> <img src="./img/unsplash_Zz5LQe-VSMY.jpg" alt="Карточка-1"><h3>Ирина Лайм</h3> <p>преподаватель по робототехнике</p></div>
+                <div class="four-section-scrolling__cards"><img src="./img/unsplash_OhKElOkQ3RE.jpg" alt="Карточка-2"><h3>Максим Петров</h3><p>преподаватель по программированию</p></div>
+                <div class="four-section-scrolling__cards"><img src="./img/unsplash_Z_bTArFy6ks.jpg" alt="Карточка-3"><h3>Лиза Весенняя</h3><p>преподаватель по программированию</p></div>
+                <div class="four-section-scrolling__cards"><img src="./img/unsplash_IF9TK5Uy-KI.jpg" alt="Карточка-4"><h3>Марина Орлова</h3><p>преподаватель по робототехнике</p></div>
+                <div class="four-section-scrolling__cards"><img src="./img/unsplash_rriAI0nhcbc.jpg" alt="Карточка-5"><h3>Константин Назаров</h3><p>преподаватель по робототехнике</p></div>
+            </div>
         </div>
 
     </section>
