--- a/Projects/Frontend projects/Forest/src/index.html
+++ b/Projects/Frontend projects/Forest/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forest</title>
-    <link rel="stylesheet" href="D:\Portfolio\WebSite\Практика-сайты\Forest\src\sass\style.css">
+    <link rel="stylesheet" href="./sass/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -135,6 +135,6 @@
         </div>
     </section>
     
-    <script src="D:\Portfolio\WebSite\Практика-сайты\Forest\src\script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
